gcc/testsuite/rust/rustc/ui/cross/cross-file-errors/main.rs
#[macro_use]
mod underscore;

fn main() {
    underscore!();
// { dg-error "" "" { target *-*-* } .-1 }
}

